User Favorite song update operation bug fixed. Request and Response dto changes. Unit test added.